--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,15 @@ python-dotenv = "^1.0.1"
 djangorestframework-simplejwt = "^5.3.1"
 requests = "^2.32.3"
 coverage = "^7.6.9"
+django-cors-headers = "^4.6.0"
+drf-yasg = "^1.21.8"
+celery = "^5.4.0"
+eventlet = "^0.38.1"
+redis = "^5.2.1"
+django-celery-beat = "^2.7.0"
+flake8 = "^7.1.1"
+black = "^24.10.0"
+isort = "^5.13.2"
 
 
 [build-system]
