--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1.4"
-psycopg2 = "^2.9.10"
 pillow = "^11.0.0"
 djangorestframework = "^3.15.2"
 python-dotenv = "^1.0.1"
@@ -24,6 +23,7 @@ django-celery-beat = "^2.7.0"
 flake8 = "^7.1.1"
 black = "^24.10.0"
 isort = "^5.13.2"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
